--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "start": "NODE_ENV=development nodemon app.js",
@@ -20,7 +20,9 @@
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.5.4"
   }
 }
